<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="forough@todo.todo">forough</maintainer>
  <license>TODO: License declaration</license>

  <depend>tiago_description</depend>
  <depend>tiago_gazebo</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>nav2_costmap_2d
    <depend>nav2_costmap_2d</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/conficguration/models" /> -->
  </export>
</package>


